# stalk-ebpf

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
stalk/: Cargo.toml  build.rs
stalk-common/: Cargo.toml
stalk-common/src/: lib.rs
stalk-ebpf/: Cargo.toml
stalk-ebpf/src/: main.rs  tracepoint.rs  xdp.rs
stalk-ebpf/src/tracepoint/: execve.rs  exit.rs  openat.rs  read.rs  read_exit.rs
stalk/src/: config.rs  event.rs  main.rs  stalk.rs
stalk/src/agent/: server.rs  state.rs
