[package]
name = "stalk-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
stalk-common = { path = "../stalk-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "stalk"
path = "src/main.rs"
